--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
     "sequelize": "^6.37.3",
+    "socket.io": "^4.8.0",
+    "stripe": "^17.1.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "twilio": "^5.3.2"
